log/build_2024-11-08_14-55-40/first_pkg_py/stderr.log
  File "/home/kayttaja/own_package_ws/install/first_pkg_py/lib/python3.10/site-packages/first_pkg_py/first_node.py", line 5
    from 
         ^
SyntaxError: invalid syntax

